--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -82,7 +82,7 @@
           <span><b>Video Course</b></span>
           <div ng-class="class2"></div>
         </div>
-        <a href="/exam">
+        <a href="/mock-test">
           <div class="col-md-2 clickchange" ng-class="click3" ng-click="clicks(3)">
             <span><b>Test Series</b></span>
             <div ng-class="class3"></div>
