exam almost complte

--- a/homepage/templates/exam.html
+++ b/homepage/templates/exam.html
@@ -1,17 +1,13 @@
-{% extends "tutorBase.html" %}
+{% extends "tutorexam.html" %}
 
-{% block tutorcontent %}
+{% block examcontent %}
+
 
 {% verbatim %}
-
 <div class="container-fluid " ng-controller="exam">
 
-  <style media="screen">
-    nav,footer{
-      display: none;
-    }
 
-  </style>
+
 
   <!-- <div class="row ">
     <div class="headsection">
@@ -150,7 +146,7 @@
 
   </div>
 </div>
-</div>
+
 
 {% endverbatim %}
 {% endblock %}
