--- a/libreERP/templates/base.html
+++ b/libreERP/templates/base.html
@@ -16,6 +16,7 @@
       {% block header %}{% endblock %}
       {% block content %}{% endblock %}
       {% block tutorbookcontent %}{% endblock %}
+      {% block tutorexamcontent %}{% endblock %}
       {% block footer %}{% endblock %}
 
       <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
