--- a/homepage/templates/career.html
+++ b/homepage/templates/career.html
@@ -1,3 +1,9 @@
+{% extends "tutorBase.html" %}
+
+{% block tutorcontent %}
+
+{% verbatim %}
+
 <title>Online tutoring jobs, Earn upto 50 thousands per month</title>
 
 <meta name="description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA"/>
@@ -91,3 +97,7 @@
     </div>
   </div>
 </div>
+
+
+{% endverbatim %}
+{% endblock %}
