--- a/homepage/templates/refund.html
+++ b/homepage/templates/refund.html
@@ -1,4 +1,10 @@
-<div class="body">
+{% extends "tutorBase.html" %}
+
+{% block tutorcontent %}
+
+{% verbatim %}
+
+<div class="body" style="padding-top: 3em;">
   <div class="container" style="padding-left:0px;padding-right:0px;">
     <div class="container-fluid">
       <section>
@@ -25,3 +31,5 @@
     </div>
   </div>
 </div>
+{% endverbatim %}
+{% endblock %}
