--- a/homepage/templates/blog.html
+++ b/homepage/templates/blog.html
@@ -1,101 +1,122 @@
-{% extends "base.html" %} {% load staticfiles %} {% block specific_head %}
-<title>Online live tutoring. Free 1-2-1 online classes. IIT JEE Preparation. School tutions online</title>
+{% extends "tutorBase.html" %}
 
-<meta name="description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA"/>
-<link rel="canonical" href="https://24tutors.com/" />
-<link rel="publisher" href="https://plus.google.com/b/105723801328437605094/"/>
-<meta property="og:locale" content="en_US" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Online live tutoring. Free 1-2-1 online classes. IIT JEE Preparation. School tutions online" />
-<meta property="og:description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA" />
-<meta property="og:url" content="https://24tutors.com" />
-<meta property="og:site_name" content="24 Tutors" />
-<meta property="og:updated_time" content="2018-04-01T07:17:53+00:00" />
-<meta property="og:image" content="https://24tutors.com/static/images/seo_tutor_common.png" />
-<meta property="og:image:secure_url" content="https://24tutors.com/static/images/seo_tutor_common.png" />
-<meta property="og:image:width" content="1333" />
-<meta property="og:image:height" content="745" />
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA" />
-<meta name="twitter:title" content="Online live tutoring. Free 1-2-1 online classes. IIT JEE Preparation. School tutions online" />
-<meta name="twitter:site" content="@tutors_24" />
-<meta name="twitter:image" content="https://24tutors.com/static/images/seo_tutor_common.png" />
-<meta name="twitter:creator" content="@tutors_24" />
+{% block tutorcontent %}
 
-<meta property="article:author" content="24Tutors.com" />
-<link rel="icon" href="/static/images/tutor.ico" type="image/gif" sizes="16x16">
-{% endblock %} {% block specific_css %}
-<link href="{% static 'css/agency.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
-<!-- Header -->
-{% block content %}
-<div>
-  <div class="container-fluid" style="padding-left:0px;padding-right:0px;">
-    <header style="background: url('/static/images/blog_banner.jpg') no-repeat top center/cover;height:40vh;width:100%;">
-      <div class="container" style="overflow:hidden;">
-        <div style="text-align:center;">
-
-        </div>
+<div style="margin-top:80px;" style="width:100%;">
+  <h1 class="heading_big" style="text-align:center">24Tutor's Blogs</h1>
+  {% if firstSection|length > 0 %}
+  <div class="blog_container">
+    <div class="flex_50Perc" >
+      <a href="/{{firstSection.0.shortUrl}}/"><img class="blog_image" ng-src="/media/{{firstSection.0.ogimage}}" alt=""></a>
+      <p class="blog_text">{{firstSection.0.title}}</p>
+    </div>
+    <div class="sec1Right">
+      <div class="sec1RightBox1" >
+        <a href="/{{firstSection.1.shortUrl}}/"><img class="blog_image" ng-src="/media/{{firstSection.1.ogimage}}" alt=""></a>
+        <p class="blog_text">{{firstSection.1.title}}</p>
       </div>
-    </header>
-  </div>
-  <!-- Services Section -->
-  <div class="body">
-    <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;">
-      {% if dataLen == 0 %}
-        <div class="row text-center">
-          <h3>No blog posts , Please visit again.</h3>
-        </div>
-      {% endif %}
-
-      {% for a in data %}
-
-      <div class="container-fluid" style="{% if forloop.counter|divisibleby:2 %}background:#eeeeee;{% endif %}">
-        <section style="padding-top: 20px;padding-bottom: 30px;">
-
-          <div class="row">
-            <div class="col-md-12 text-left" style="margin-left: 40px;margin-right: 10px">
-              <h2 style="font-size:19px;" class="text-primary"> <a href = "/{{a.url}}/ ">  {{a.title}} </a></h2>
-              By {{a.user}} <span style="margin-left: 10px;"> | </span> <span style="margin-left: 10px;">{{a.date}}</span>
-            </div>
-          </div>
-          <div class="container-fluid" style="margin-left:40px;margin-right: 10px;padding:0px;margin-top:15px;">
-            {{a.header | safe}}
-          </div>
-        </section>
+      {% for blog in firstSection|slice:"2:4" %}
+      <div class="sec1RightBox2">
+        <a href="/{{blog.shortUrl}}/"><img class="blog_image" src="/media/{{blog.ogimage}}" alt=""></a>
+        <p class="blog_text">{{blog.title}}</p>
       </div>
       {% endfor %}
 
-      <div class='pages' style='text-align:center'>
-        <div class='pagesbtn'>
-        {% if pages.currentpage != pages.first %}
-          <a href="/blog/">
-            <div class="btn btn-primary">First</div><a>
-          <a href="/blog/?page={{ pages.prev }}"><div class="btn btn-primary">Prev</div><a>
-        {% endif %}
-        {% if pages.currentpage != pages.last and pages.last > pages.first %}
-          <a href="/blog/?page={{ pages.next }}"><div class="btn btn-primary">Next</div><a>
-          <a href="/blog/?page={{ pages.last }}"><div class="btn btn-primary">Last</div><a>
-        {% endif %}
-
-        </div>
-      </div><br> {% endblock %} {% block footer %} {% include "footer.html" %}
     </div>
   </div>
+  {% endif %}
+
+
+  <div class="blog_container">
+
+    <div class="sec2Left">
+      {% for blog in second_sec1 %}
+      <div class="flex_33Perc">
+        <a href="/{{blog.shortUrl}}/"><img class="blog_image" src="/media/{{blog.ogimage}}" alt=""></a>
+        <p class="blog_text">{{blog.title}}</p>
+      </div>
+      {% endfor %}
+
+      {% for blog in second_sec2 %}
+      <div class="flex_33Perc" >
+        <a href="/{{blog.shortUrl}}/"><img class="blog_image" src="/media/{{blog.ogimage}}" alt=""></a>
+        <p class="blog_text">{{blog.title}}</p>
+      </div>
+      {% endfor %}
+
+      <div class="sec1Right">
+        {% if thirdSection.0 %}
+        <div class="sec1RightBox1" >
+          <a href="/{{thirdSection.0.shortUrl}}/"><img class="blog_image" src="/media/{{thirdSection.0.ogimage}}" alt=""></a>
+          <p class="blog_text">{{thirdSection.0.title}}</p>
+        </div>
+        {% endif %}
+
+        {% for blog in thirdSection|slice:"2:4" %}
+        <div  class="sec1RightBox2" >
+          <a href="/{{blog.shortUrl}}/"><img class="blog_image" src="/media/{{blog.ogimage}}" alt=""></a>
+          <p class="blog_text">{{blog.title}}</p>
+        </div>
+        {% endfor %}
+      </div>
+      {% if thirdSection.1 %}
+      <div  class="flex_50Perc" >
+        <a href="/{{thirdSection.1.shortUrl}}/"><img class="blog_image" src="/media/{{thirdSection.1.ogimage}}" alt=""></a>
+        <p class="blog_text">{{thirdSection.1.title}}</p>
+      </div>
+      {% endif %}
+    </div>
+
+
+    {% verbatim %}
+    <div class="sec2Right">
+      <div class="bottomLine" style="padding:0 15px;">
+        <div class="textHeading">
+          <h4>Get Regular Blog Updates</h4>
+        </div>
+        <div>
+          <input class="form-control" type="text" name="" value="" ng-model="emailAddress" placeholder="email address">
+        </div>
+        <div class="sendUpdates btn_gradient" ng-click=sendUpdates()>
+          Send Updates!
+        </div>
+      </div>
+
+      <div style="padding:0 15px;">
+        <div class="textHeading">
+          <h4>Most Recent Posts</h4>
+        </div>
+        <div style="padding:0 30px;">
+          <div style="border-bottom:1px solid #e0e0e0;" ng-repeat="p in recentPosts" >
+            <h4 ng-click="openBlog(p.shortUrl,p.pk)" style="font-size:14px; font-weight:bold; cursor:pointer;"> <span>{{$index + 1}}. </span> <span> {{p.title}} </span>  </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endverbatim %}
+
+  </div>
+
+
+  <div class="prevNextBtn">
+
+    {% if pages.currentpage != pages.first %}
+      <a href="/blog/">
+        <button class="btn_gradient">First</button><a>
+      <a href="/blog/?page={{ pages.prev }}"><button class="btn_gradient">Prev</button><a>
+    {% endif %}
+    {% if pages.currentpage != pages.last and pages.last > pages.first %}
+      <a href="/blog/?page={{ pages.next }}"><button class="btn_gradient">Next</button><a>
+      <a href="/blog/?page={{ pages.last }}"><button class="btn_gradient">Last</button><a>
+    {% endif %}
+
+
+  </div>
+
+
+  <!-- {{blogs}} -->
 </div>
 
 
-
-
-{% endblock %} {% block specific_js %}
-<script src="{% static 'js/jquery.easing.min.js' %}"></script>
-<script src="{% static 'js/classie.js' %}"></script>
-<!-- <script src="{% static 'js/cbpAnimatedHeader.js' %}"></script> -->
-
-<script src="{% static 'js/agency.js' %}"></script>
-<script src="{% static 'js/angular.min.js' %}"></script>
-<script src="{% static 'js/angular-ui-router.min.js' %}"></script>
-<script src="{% static 'js/angular-sanitize.min.js' %}"></script>
-<script src="{% static 'js/app.homepage.js' %}"></script>
 
 {% endblock %}
