--- a/tutor/templates/student.html
+++ b/tutor/templates/student.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html ng-app="myApp">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,119 +22,131 @@
 </head>
 
 <body ng-controller="myCtrl1">
-  <nav class="navbar navbar-inverse" style="border: none;border-radius: 0px;margin-bottom:0px;height:6vh;">
+  <nav class="navbar navbar-inverse hidden-xs hidden-sm" style="border: none;border-radius: 0px;margin-bottom:0px;height:6vh;">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href=""><img src="{{brandLogoInverted}}" style="margin-top:-20px; max-width:400px;height:40px;margin-top:-10px;" height="60"></img></a>
+        <img src="{{brandLogoInverted}}" style="margin-top:10px; max-width:400px;height:30px; "></img>
       </div>
       {% verbatim %}
+      <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav" style="color:#fff;">
+        <li class="dropdown" style="padding: 0px 5px;">
+          <a class="dropdown-toggle" data-toggle="dropdown" style="color:#fff; outline:none" href="#"><i ng-click="setPen(); mode='line'" title="Pencil" class="fa fa-pencil" aria-hidden="true" ></i>
+          </a>
+          <ul class="dropdown-menu">
+            <input type="range" min="1" max="20" ng-model="size" ng-change="canvas.freeDrawingBrush.width = size;">
+          </ul>
+        </li>
 
-      <ul class="nav navbar-nav" style="padding-top:10px;margin-left:500px;">
-        <li style="color:white;">{{timeMins}} : {{timeSecs}}</li>
+        <li class="dropdown" style="padding: 0px 5px;">
+          <a class="dropdown-toggle" data-toggle="dropdown" style="color:#fff; outline:none" href="#"><i ng-click="setPen(); mode='line'" title="Eraser" class="fa fa fa-eraser " aria-hidden="true" ></i>
+          </a>
+
+          <ul class="dropdown-menu">
+            <li><a ng-click="eraserSize =10; setEraser();"><i class="fa fa-eraser" aria-hidden="true" style="font-size:5px;" ></i></a></li>
+            <li><a ng-click="eraserSize=20; setEraser();"><i class="fa fa-eraser" aria-hidden="true" style="font-size:10px;" ></i></a></li>
+            <li><a ng-click="eraserSize =30; setEraser();"><i class="fa fa-eraser" aria-hidden="true" style="font-size:15px;" ></i></a></li>
+          </ul>
+
+        </li>
+
+        <li style="padding: 0px 5px;">
+          <a style="color:#fff; outline:none" href="#"><i ng-click="mode= 'i-text'; canvas.isDrawingMode = false;" title="Text" class="fa fa-font " aria-hidden="true" ></i>
+          </a>
+
+        </li>
+
+        <li style="padding: 0px 5px;"><a style="color:#fff;" href="#">
+          <input type="file" id="filePicker" style="display:none;" file-model="form.image">
+          <i ng-click="addFile()" title="Image" class="fa fa-file-image-o " aria-hidden="true" >
+          </i>
+        </a>
+      </li>
+
+        <li class="dropdown" style="padding: 0px 5px;">
+          <a class="dropdown-toggle" data-toggle="dropdown" style="color:#fff; outline:none" href="#"><i ng-click="fabric.Object.prototype.selectable = false; canvas.isDrawingMode = false; canvas.selection = false;" title="Shapes" class="fa fa-clone " aria-hidden="true" ></i>
+          </a>
+          <ul class="dropdown-menu">
+            <li style="font-size:1.5vh;"><a ng-click="mode = 'rect'; canvas.isDrawingMode = false; ">Rectangle</a></li>
+            <li style="font-size:1.5vh;"><a ng-click="mode = 'circle'; canvas.isDrawingMode = false;">Circle</a></li>
+            <li style="font-size:1.5vh;"><a ng-click="mode = 'triangle'; canvas.isDrawingMode = false;">Triangle</a></li>
+          </ul>
+        </li>
+
+        <li style="padding: 0px 5px;"><a style="color:#fff;" href="#"><i ng-click="changeGrid();" title="Grid" class="fa fa-th " aria-hidden="true" ></i></a></li>
+
+
+        <li style="padding: 0px 5px;">
+          <a style="color:red;" href="#">
+          <i ng-click="col='red'; canvas.freeDrawingBrush.color='red';" style=" background-color:red; border: 1px solid #b0b0b0" class="fa fa-th " aria-hidden="true" ></i>
+        </a>
+        </li>
+        <li style="padding: 0px 5px;">
+          <a style="color:blue;" href="#">
+           <i style=" background-color:blue; border: 1px solid #b0b0b0" class="fa fa-th " aria-hidden="true" ></i>
+         </a>
+        </li>
+        <li style="padding: 0px 5px;">
+          <a style="color:green;" href="#"> <i ng-click="col='green'; canvas.freeDrawingBrush.color='green';" style=" background-color:green; border: 1px solid #b0b0b0" class="fa fa-th " aria-hidden="true" ></i>
+          </a>
+        </li>
+        <li style="padding: 0px 5px;">
+          <a style="color:yellow;" href="#"> <i ng-click="col='yellow'; canvas.freeDrawingBrush.color='yellow';" style=" background-color:yellow; border: 1px solid #b0b0b0" class="fa fa-th " aria-hidden="true" ></i>
+          </a>
+        </li>
+        <li style="padding: 0px 5px;">
+          <a style="color:black;" href="#"> <i ng-click="col='black'; canvas.freeDrawingBrush.color='black';" style=" background-color:black; border: 1px solid #b0b0b0" class="fa fa-th " aria-hidden="true" ></i>
+           </a>
+        </li>
+
+        <li style="padding: 0px 15px;">
+          <a style="color:#fff;" href="#">
+            <span style="font-size:16px;"> {{timeMins}} : {{timeSecs}}</span>
+          </a>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right ">
-        <li><a style="cursor:pointer;"><i ng-click="showFeedbackForm();" class="fa fa-sign-out " aria-hidden="true" style="font-size:20px;color:white;"></i></a></li>
+        <li><a style="cursor:pointer;"><i ng-click="showFeedbackForm();" class="fa fa-sign-out " aria-hidden="true" style="font-size:16px;color:white;"></i></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right ">
         <li>
-          <span style="font-size:20px;color:white;margin-top:10px;">{{name}}</span>
+          <span style="font-size:16px;color:white;margin-top:10px;">{{name}}</span>
           <img ng-src="{{dp}}" style="margin-top:5px; max-width:400px;height:40px;" height="60"></img>
         </li>
       </ul>
     </div>
+    </div>
   </nav>
+
+
+  <nav class="navbar navbar-inverse hidden-lg hidden-md" style="border: none;border-radius: 0px;margin-bottom:0px;height:6vh;">
+    <div class="navbar-header">
+      {% endverbatim %}
+      <img src="{{brandLogoInverted}}" alt="sad" style="margin-top:10px; max-width:400px;height:30px; "></img>
+      {% verbatim %}
+      <ul class="nav navbar-nav navbar-right ">
+      <li><a style="cursor:pointer;"><i ng-click="showFeedbackForm();" class="fa fa-sign-out " aria-hidden="true" style="font-size:16px;color:white;"></i></a></li>
+    </ul>
+    </div>
+
+    <!-- <ul class="nav navbar-nav navbar-right ">
+      <li><a style="cursor:pointer;"><i ng-click="showFeedbackForm();" class="fa fa-sign-out " aria-hidden="true" style="font-size:16px;color:white;"></i></a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right ">
+      <li>
+        <span style="font-size:16px;color:white;margin-top:10px;">{{name}}</span>
+        <img ng-src="{{dp}}" style="margin-top:5px; max-width:400px;height:40px;" height="60"></img>
+      </li>
+    </ul> -->
+  </nav>
+
+
+
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-9">
-
-
-        <div class="row">
-          <div class="col-md-7" style="padding:0px;">
-
-            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-
-              <div class="btn-group dropdown" role="group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="height:5vh;border: none;" ng-click="setPen(); mode='line'">
-                <i title="Pencil" class="fa fa-pencil" aria-hidden="true" style=" font-size:3vh" ></i>
-              </button>
-                <ul class="dropdown-menu">
-                  <li><input type="range" min="1" max="20" ng-model="size" ng-change="canvas.freeDrawingBrush.width = size;"></li>
-                </ul>
-              </div>
-
-              <div class="btn-group dropdown" role="group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="height:5vh;border: none;">
-                  <i title="Eraser" class="fa fa-eraser"  aria-hidden="true" style=" font-size:3vh"></i>
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a ng-click="eraserSize =10; setEraser();"><i class="fa fa-eraser" aria-hidden="true" style="font-size:5px;" ></i></a></li>
-                  <li><a ng-click="eraserSize=20; setEraser();"><i class="fa fa-eraser" aria-hidden="true" style="font-size:10px;" ></i></a></li>
-                  <li><a ng-click="eraserSize =30; setEraser();"><i class="fa fa-eraser" aria-hidden="true" style="font-size:15px;" ></i></a></li>
-                </ul>
-              </div>
-
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default" style="height:5vh;border: none;" ng-click="mode= 'i-text'; canvas.isDrawingMode = false;">
-                  <i title="Text" class="fa fa-font" aria-hidden="true" style=" font-size:3vh" ></i>
-                </button>
-              </div>
-
-              <div class="btn-group" role="group">
-                <input type="file" id="filePicker" style="display:none;" file-model="form.image" >
-                <button type="button" class="btn btn-default" style="height:5vh;border: none;" ng-click="addFile()" >
-                  <i class="fa fa-file-image-o" aria-hidden="true" style=" font-size:3vh" ></i>
-                </button>
-
-              </div>
-              <div class="btn-group dropdown" role="group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="height:5vh;border: none;" ng-click="fabric.Object.prototype.selectable = false; canvas.isDrawingMode = false; canvas.selection = false;">
-                  <i title="Shapes" class="fa fa-clone dropdown-toggle" data-toggle="dropdown" aria-hidden="true" style=" font-size:3vh" ><span class="caret"></span></i>
-                </button>
-                <ul class="dropdown-menu">
-                  <li style="font-size:1.5vh;"><a ng-click="mode = 'rect'; canvas.isDrawingMode = false; ">Rectangle</a></li>
-                  <li style="font-size:1.5vh;"><a ng-click="mode = 'circle'; canvas.isDrawingMode = false;">Circle</a></li>
-                  <li style="font-size:1.5vh;"><a ng-click="mode = 'triangle'; canvas.isDrawingMode = false;">Triangle</a></li>
-                </ul>
-              </div>
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default" style="height:5vh;border: none;" ng-click="changeGrid();">
-                  <i class="fa fa-th" aria-hidden="true" style=" font-size:3vh"></i>
-                </button>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="col-md-3" style="padding:7px;">
-            <div id=colors>
-              <div class="col-md-2">
-                <button ng-click="col='blue'; canvas.freeDrawingBrush.color='blue';" style="width:3vh; height:3vh; border:0; background-color: blue;"></button>
-              </div>
-              <div class="col-md-2">
-                <button ng-click="col='red'; canvas.freeDrawingBrush.color='red';" style="width:3vh; height:3vh; border:0; background-color: red;"></button>
-              </div>
-              <div class="col-md-2">
-                <button ng-click="col='green'; canvas.freeDrawingBrush.color='green';" style="width:3vh; height:3vh; border:0; background-color: green;"></button>
-              </div>
-              <div class="col-md-2">
-                <button ng-click="col='yellow'; canvas.freeDrawingBrush.color='yellow';" style="width:3vh; height:3vh; border:0; background-color: yellow;"></button>
-              </div>
-              <div class="col-md-2">
-                <button ng-click="col='black'; canvas.freeDrawingBrush.color='black';" style="width:3vh; height:3vh; border:0; background-color: black;"></button>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2" style="padding-top:10px;">
-            <div class="col-md-4">
-              <span style="padding-top:10px; height: 20px; width: 20px; background-color: {{dataVariables.onlineStatus?'green':'red'}}; border-radius: 50%; display: inline-block;"></span>
-            </div>
-            <div class="col-md-8">
-              <span style="margin-bottom:10px;margin-left:10px;">{{dataVariables.onlineStatus?'Online':'Offline'}}</span>
-            </div>
-          </div>
-        </div>
+      <div class="col-md-9 col-sm-12 col-xs-12">
 
         <div class="row" style="border-top:1px solid #b8b8b8;">
           <div class="col-md-12" style="padding:0px;">
@@ -141,7 +154,7 @@
               <canvas id="tutorCanvas"></canvas>
             </div>
           </div>
-          <button ng-click="dataVariables.sendHeight = true; increaseCanvas();" class="btn btn-primary btn-sm " style="position:fixed;bottom:0px;left:0px;" >+</button>
+          <button ng-click="dataVariables.sendHeight = true; increaseCanvas();" class="btn btn-primary btn-sm " style="position:fixed;bottom:0px;left:0px;">+</button>
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -152,7 +165,7 @@
         </div>
       </div>
 
-      <div class="col-md-3" style="border-left:1px solid #b8b8b8;height:93vh;">
+      <div class="col-md-3 hidden-xs hidden-sm" style="border-left:1px solid #b8b8b8;height:93vh;">
         <div class="row">
           <div class="col-md-3" style="padding-top:20px;">
             <img ng-src="{{teacher.profile.displayPicture}}" class="img-circle" alt="User Image" style="width:60px; height:60px;">
@@ -184,7 +197,7 @@
             <div id="scrollbar" class="panel-body" style="overflow-y: auto; overflow-x:hidden; height:66vh;">
 
               <div class="row" ng-repeat="m in messages">
-                <div class="container-fluid {{m.sendByMe? 'pull-right': 'pull-left'}}" >
+                <div class="container-fluid {{m.sendByMe? 'pull-right': 'pull-left'}}">
                   <div class="container-fluid text-right" style="border:solid 1px #eeeeee;padding:10px;">
                     <span ng-if="m.message.indexOf('http') == -1">{{m.message}}</span>
                     <a target="_blank" ng-if="m.message.indexOf('http') != -1" href="{{m.message}}">{{m.message}}</a>
@@ -203,7 +216,7 @@
 
           <div class="input-group">
             <span class="input-group-btn"><button class="btn btn-primary" ng-click="attachMessageFile()"> <i class="fa fa-paperclip"></i> </button></span>
-            <input class="form-control" type="text" ng-enter="enterStudentMsg()"  ng-model="studentText" placeholder="Type your message here..." />
+            <input class="form-control" type="text" ng-enter="enterStudentMsg()" ng-model="studentText" placeholder="Type your message here..." />
             <span class="input-group-btn"><button ng-click="enterStudentMsg()" class="btn btn-primary">Submit</button></span>
           </div>
         </div>
@@ -213,5 +226,5 @@
 
   </div>
 
-{% endverbatim %}
+  {% endverbatim %}
 </body>
