--- a/homepage/templates/tutorBook.html
+++ b/homepage/templates/tutorBook.html
@@ -60,6 +60,7 @@
 <script src="{% static 'js/datetimepicker.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
 <script src="{% static 'js/custom/filters.js' %}"></script>
+<script src="{% static 'js/app.tutor.bookSection.js' %}"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
@@ -70,7 +71,6 @@
   document.addEventListener('DOMContentLoaded', function() {
     console.log('document - DOMContentLoaded - capture'); // 2nd
 
-    setVisitorDetails("RR Syrow", "9898323299", "rr@syrow.com");
 
   }, true);
 </script>
