--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2024,11 +2024,10 @@ hr {
 }
 
 .top_header {
-  margin-bottom: 10px;
   position: relative;
   background-size: 100%;
   min-height: 20vh;
-  background-image: linear-gradient(rgba(190, 190, 190, 0.8), rgba(196, 196, 196, 0.8)), url('/static/images/24tut/matheader.png');
+  background-image: url('https://epsilonai.com/static/images/blue_waves.jpg');
 }
 
 .video_card {
