--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -89,7 +89,7 @@
         </div>
         <a href="/mock-test">
           <div class="col-md-2 clickchange" ng-class="click3" ng-click="clicks(3)">
-            <a href="#"><b>Test Series</b></a>
+            <a href="/mock-test"><b>Test Series</b></a>
             <div ng-class="class3"></div>
           </div>
         </a>
