--- a/homepage/templates/tutorBook.html
+++ b/homepage/templates/tutorBook.html
@@ -46,20 +46,11 @@
 
 {% endblock %}{% block specific_js %}
 <script src="{% static 'js/angular.min.js' %}"></script>
-<script src="{% static 'js/angular-bootstrap-confirm.min.js' %}"></script>
 <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
-<script src="{% static 'js/angular-sanitize.min.js' %}"></script>
 <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
 <script src="{% static 'js/js.cookie.min.js' %}"></script>
-<script src="{% static 'js/tinymce.min.js' %}"></script>
-<script src="{% static 'js/angular-flash.js' %}"></script>
-<script src="{% static 'js/angular-aside.min.js' %}"></script>
-<script src="{% static 'js/owl.carousel.min.js' %}"></script>
-<script src="{% static 'js/app.homepage.main.js' %}"></script>
-<script src="{% static 'js/angular-owl-carousel-2.js' %}"></script>
-<script src="{% static 'js/datetimepicker.js' %}"></script>
-<script src="{% static 'js/angular-flash.js' %}"></script>
 <script src="{% static 'js/custom/filters.js' %}"></script>
+<script src="{% static 'js/app.tutor.common.js' %}"></script>
 <script src="{% static 'js/app.tutor.bookSection.js' %}"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <script type="text/x-mathjax-config">
