--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -14,7 +14,7 @@
   <div class="container-fluid no_padding" style="min-height:13vh;">
     <div class="col-md-12 no_padding">
       <div class="col-md-6 text-center foo_bar">
-        <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Get hands on the <a href="#" class="linkline">Great Courses</a> you like </span><br>
+        <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Go to the <a >Forum</a> to meet students like you and Best teachers</span><br>
       </div>
       <div class="col-md-6 text-center foo_bar">
         <div class="container-fluid no_padding social_div">
@@ -84,7 +84,7 @@
       <div class="col-md-4 col-sm-6 footer">
         <ul class="folist">
           <h4 class="text-muted">Links</h4>
-          
+
           <!-- <li><a href="">Tutors</a></li> -->
           <!-- <li><a href="">Quiz & Tests </a></li> -->
           <li><a href="/testimonials">Our Testimonials </a></li>
