--- a/homepage/templates/notFound404.html
+++ b/homepage/templates/notFound404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,4 +9,33 @@
     <h1>not found</h1>
 
   </body>
-</html>
+</html> -->
+{% extends "tutorBase.html" %}
+
+{% block tutorcontent %}
+
+
+
+<div class="row" style="padding-top: 2em;min-height:60vh;">
+  <div class="col-md-6 text-center fof">
+    <h1 style="padding-top: 2em;"><b>PAGE NOT FOUND !</b></h1>
+    <div class="message-box">
+      <h2>Error 404 </h2></br>
+      <h4>Sorry! That page dosen't seem to exist</h4>
+      <div class="text-center">
+        <div>
+          <a href=""><button class="btn_gradient " style="display:inline-block;">Go Back</button></a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-md-6 text-center" style="margin-top:3em;">
+     <img src="/static/images/24tut/404cat.jpg" style="width:400px;height:400px;"/>
+
+  </div>
+
+</div>
+
+
+{% endblock %}
